--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
+    "nodemailer": "^6.7.8",
     "yup": "^0.32.11"
   },
   "devDependencies": {
