--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "nodemailer": "^6.7.8",
+    "short-uuid": "^4.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
